--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="os-box swiper-container">
         <div class="swiper-wrapper">
-            <div class='swiper-slide' id='index' ids="index">
+            <div class='swiper-slide os' id='index' ids="index">
                 <div class="os-min title1">
                     <img src="images/index/title01.png" >
                 </div>
@@ -22,19 +22,19 @@
                     <img src="images/index/title02.png">
                 </div> 
                 <div class="os-min mainpng">
-                    <div class="huan-line one"><img data-src="images/index/huanline.png" class="swiper-lazy"/></div>
-                    <div class="huan-line jx"><img data-src="images/index/huanline.png" class="swiper-lazy"/></div>
-                    <img data-src="images/index/mian.png" class="mo swiper-lazy"/>
+                    <div class="huan-line one"><img src="images/index/huanline.png" class="swiper-lazy"/></div>
+                    <div class="huan-line jx"><img src="images/index/huanline.png" class="swiper-lazy"/></div>
+                    <img src="images/index/mian.png" class="mo swiper-lazy"/>
                 </div>
                 <div class="os-min title3">
-                    <img data-src="images/index/title03.png" class="swiper-lazy">
+                    <img src="images/index/title03.png" class="swiper-lazy">
                 </div>
                 <div class="os-min foot">
                     <img src="images/qky-logo.png"  class="qkylogo"/>
                     <img src="images/down.png" class="downicon"/>
                 </div>
             </div>
-            <div class='swiper-slide' id='list' ids='list'>
+            <div class='swiper-slide os' id='list' ids='list'>
                 <div class="os-min listtop"><img src="images/list/top.png"/></div>
                 <div class="list-mian">
                     <div class="list-one os-min">
@@ -60,7 +60,7 @@
                     <img src="images/down.png" class="downicon" />
                 </div>
             </div>
-            <div class='swiper-slide sig' id='desk' ids='desk'> 
+            <div class='swiper-slide sig os' id='desk' ids='desk'> 
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
 
                 <div class="os-min imgshow sg">
@@ -79,7 +79,7 @@
                     <img src="images/down.png" class="downicon"/>
                 </div>
             </div>
-            <div class='swiper-slide sig' id='commun' ids='commun'>
+            <div class='swiper-slide sig os' id='commun' ids='commun'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
 
                 <div class="os-min imgshow db">
@@ -98,7 +98,7 @@
                     <img src="images/down.png" class="downicon animated infinite bounce" />
                 </div>
             </div>
-            <div class='swiper-slide sig' id='mail' ids='mail'>
+            <div class='swiper-slide sig os' id='mail' ids='mail'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
 
                 <div class="os-min imgshow db">
@@ -116,7 +116,7 @@
                     <img src="images/down.png" class="downicon animated infinite bounce" />
                 </div>
             </div>
-            <div class='swiper-slide sig' id='doc' ids='doc'>
+            <div class='swiper-slide sig os' id='doc' ids='doc'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
                 <div class="os-min imgshow db">
                         <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
@@ -134,7 +134,7 @@
                     <img src="images/down.png" class="downicon animated infinite bounce" />
                 </div>
             </div>
-            <div class='swiper-slide sig' id='flow' ids='flow'>
+            <div class='swiper-slide sig os' id='flow' ids='flow'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
                 <div class="os-min imgshow db">
                         <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
@@ -152,7 +152,7 @@
                     <img src="images/down.png" class="downicon animated infinite bounce" />
                 </div>
             </div>
-            <div class='swiper-slide sig' id='office' ids='office'>
+            <div class='swiper-slide sig os' id='office' ids='office'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
                         <div class="swiper-container imgshow db2" id="swiper-container3">
                             <div class="swiper-wrapper">
@@ -169,7 +169,7 @@
                     <img src="images/down.png" class="downicon animated infinite bounce" />
                 </div>
             </div>
-            <div class='swiper-slide' id='end' ids='end'>
+            <div class='swiper-slide os' id='end' ids='end'>
                 <div class="os-min endtitle"><img src="images/end/endtitle.png"/></div>
                 <div class="os-min endlogo"><img src="images/end/endlogo.png"/></div>
                 <div class="os-min endinfo"><img src="images/end/endinfo.png"/></div>
