简化项目，补完截图

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <div class="os-min decktxt imgtxt"><img src="images/deck/decktxt.png"/></div>
 
                 <div class="os-min imgshow db">
-                    <div class="os-min imgshow-bg "><img src="images/jt.png" alt="" class="imgs"></div>
-                    <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg "><img src="images/rl1.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg"><img src="images/rl2.png" alt="" class="imgs"></div>
                 </div>
                 <div class="os-min rctxt imgtxt"><img src="images/deck/rctxt.png"/></div>
                 
@@ -83,13 +83,13 @@
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
 
                 <div class="os-min imgshow db">
-                    <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                    <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg"><img src="images/txl1.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg"><img src="images/txl2.png" alt="" class="imgs"></div>
                 </div>
                 <div class="os-min txltxt imgtxt"><img src="images/通讯录.png"/></div>
                 <div class="os-min imgshow db">
-                    <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                    <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg"><img src="images/dx1.png" alt="" class="imgs"></div>
+                    <div class="os-min imgshow-bg"><img src="images/dx2.png" alt="" class="imgs"></div>
                 </div>
                 <div class="os-min dxtxt imgtxt"><img src="images/短信.png"/></div>
 
@@ -102,12 +102,12 @@
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
 
                 <div class="os-min imgshow db">
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/yj1.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/yj2.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min yjtxt1 imgtxt"><img src="images/邮件1.png"/></div>
                     <div class="os-min imgshow sg">
-                        <div class="imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="imgshow-bg"><img src="images/yj3.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min yjtxt2 imgtxt"><img src="images/邮件2.png"/></div>
 
@@ -119,13 +119,13 @@
             <div class='swiper-slide sig os' id='doc' ids='doc'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
                 <div class="os-min imgshow db">
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw1.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw2.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min gwtxt1 imgtxt"><img src="images/公文1.png"/></div>
                     <div class="os-min imgshow db">
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw3.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw4.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min gwtxt2 imgtxt"><img src="images/公文2.png"/></div>
 
@@ -137,13 +137,13 @@
             <div class='swiper-slide sig os' id='flow' ids='flow'>
                 <div class="os-min backlist"><img src="images/backlist.png"/></div>
                 <div class="os-min imgshow db">
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw1.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw2.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min lctxt1 imgtxt"><img src="images/流程1.png"/></div>
                     <div class="os-min imgshow db">
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
-                        <div class="os-min imgshow-bg"><img src="images/jt.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw3.png" alt="" class="imgs"></div>
+                        <div class="os-min imgshow-bg"><img src="images/gw4.png" alt="" class="imgs"></div>
                     </div>
                     <div class="os-min lctxt2 imgtxt"><img src="images/流程2.png"/></div>
 
@@ -182,7 +182,7 @@
     </div>
 
     <!--公共js-->
-    <script language="JavaScript" charset="utf-8" src="bil/jquery-1.9.1.min.js"></script>
+    <script language="JavaScript" charset="utf-8" src="js/jquery-1.9.1.min.js"></script>
     <script language="JavaScript" charset="utf-8" src="js/swiper-3.4.2.jquery.min.js"></script>
     <script language="JavaScript" charset="utf-8" src="js/OAshow.js"></script>
 </body>
