--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="progress">
             <div class="progresslogo"><img src="images/qky-logob2.png" alt=""></div>
             <div class="progresszi"><b></b></div>
-            <div class="progresstxt">0%</div>
+            <div class="progresstxt"><span>正在加载：</span><span class="bf">0%</span></div>
         </div>
         
     </div>
