更改加载样式和修改跳转错误

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
     <div class="loadprogress">
         <div class="progress">
-            <div class="progresslogo"><img src="images/qky-logob2.png" alt=""></div>
-            <div class="progresszi"><b></b></div>
-            <div class="progresstxt"><span>正在加载：</span><span class="bf">0%</span></div>
+            <!-- <div class="progresslogo"><img src="images/qky-logob2.png" alt=""></div>
+            <div class="progresszi"><b></b></div> -->
+        
+            <div class="progressyuan">
+                <div class="proleft pro"><b></b></div>
+                <div class="proright pro"><b></b></div>
+                <div class="protxt"><img src="images/qky-logob2.png" alt=""><span class="bf">0%</span></div>
+            </div>
+            <!-- <div class="progresstxt"><span>正在加载：</span><span class="bf">0%</span></div> -->
         </div>
         
     </div>
